# nixpkgs-update-log-checker

./: .gitattributes  .gitignore  .typos.toml  Cargo.nix  Cargo.toml  LICENSE  README.md  dprint.json  flake.nix  package.nix  zizmor.yml
.github/: dependabot.yml  renovate.json
.github/actions/setup-nix/: action.yml
.github/workflows/: dependency-review.yml  lint.yml  merge-bot-pr.yml  nix.yml
snapshots/: README.jp.md  README.md
src/: cli.rs  log_analysis.rs  main.rs  package_checker.rs
