[package]
name = "nixpkgs-update-log-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.59", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
