[package]
name = "nixpkgs-update-log-checker"
version = "0.1.0"
edition = "2024"
description = "CLI to check the update log of nixpkgs"
homepage = "https://github.com/kachick/nixpkgs-update-log-checker"
license = "MIT"
authors = ["Kenichi Kamiya <kachick1@gmail.com>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.26.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
